fixed mobile indicator being squished

--- a/AlanWalkerTheme/friendList.css
+++ b/AlanWalkerTheme/friendList.css
@@ -98,6 +98,10 @@
   x: 27;
   y: 27;
 }
+.peopleListItem-u6dGxF .avatar-2MSPKk svg rect[width="10"][height="15"] {
+  height: 19px;
+  y: 21;
+}
 .peopleListItem-u6dGxF .text-3j8t_e {
   margin: 0;
   margin-left: 15px;
